# WinRouteTool

./: .gitignore  CLAUDE.md  LICENSE  README.md  RouteKeeper.spec  build.py  pyproject.toml
.claude/: frontend-rules.md  persona-control.md  settings.json
.claude/commands/: clean-state-check.md  cold-start-audit.md  evaluate.md  finish-session.md  observability-contract.md  quality-snapshot.md  start-session.md
examples/: usage.py
routekeeper/: __init__.py  __main__.py  cli.py  gui.py  route_manager.py  storage.py  win_api.py
