[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "routekeeper"
version = "1.0.0"
description = "Windows 静态路由管理工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RouteKeeper Team"}
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
routekeeper = "routekeeper.cli:main"

[project.urls]
Homepage = "https://github.com/routekeeper/routekeeper"
Repository = "https://github.com/routekeeper/routekeeper"

[tool.setuptools.packages.find]
include = ["routekeeper*"]
